EstateHub/salesforce/force-app/main/default/objects/Property__c/fields/Area_SqFt__c.field-meta.xml
<CustomField>
    <fullName>Area_SqFt__c</fullName>
    <label>Area (sq ft)</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>0</scale>
</CustomField>