EstateHub/salesforce/force-app/main/default/objects/Property__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <type>Url</type>
    <description>Optional photo for the listing. When empty, the app shows a typed placeholder.</description>
</CustomField>