EstateHub/salesforce/force-app/main/default/objects/Property__c/fields/Listing_Status__c.field-meta.xml
<CustomField>
    <fullName>Listing_Status__c</fullName>
    <label>Listing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
                <default>true</default>
                <label>Available</label>
            </value>
            <value>
                <fullName>Under Offer</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>