EstateHub/salesforce/force-app/main/default/objects/Property__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <label>Property Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartment</fullName>
                <default>true</default>
                <label>Apartment</label>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Independent House</fullName>
            </value>
            <value>
                <fullName>Plot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>